fixed spacing for shows

--- a/src/output.css
+++ b/src/output.css
@@ -1525,6 +1525,14 @@
     border-top-left-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
   }
+  .rounded-l-2xl {
+    border-top-left-radius: var(--radius-2xl);
+    border-bottom-left-radius: var(--radius-2xl);
+  }
+  .rounded-l-xl {
+    border-top-left-radius: var(--radius-xl);
+    border-bottom-left-radius: var(--radius-xl);
+  }
   .rounded-t {
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
@@ -1535,6 +1543,14 @@
   .rounded-r {
     border-top-right-radius: 0.25rem;
     border-bottom-right-radius: 0.25rem;
+  }
+  .rounded-r-2xl {
+    border-top-right-radius: var(--radius-2xl);
+    border-bottom-right-radius: var(--radius-2xl);
+  }
+  .rounded-r-xl {
+    border-top-right-radius: var(--radius-xl);
+    border-bottom-right-radius: var(--radius-xl);
   }
   .rounded-tr {
     border-top-right-radius: 0.25rem;
@@ -1646,8 +1662,17 @@
   .bg-amber-100\/5 {
     background-color: color-mix(in oklab, var(--color-amber-100) 5%, transparent);
   }
+  .bg-amber-100\/10 {
+    background-color: color-mix(in oklab, var(--color-amber-100) 10%, transparent);
+  }
   .bg-amber-200 {
     background-color: var(--color-amber-200);
+  }
+  .bg-amber-200\/5 {
+    background-color: color-mix(in oklab, var(--color-amber-200) 5%, transparent);
+  }
+  .bg-amber-200\/10 {
+    background-color: color-mix(in oklab, var(--color-amber-200) 10%, transparent);
   }
   .bg-amber-300 {
     background-color: var(--color-amber-300);
@@ -1657,6 +1682,9 @@
   }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
+  }
+  .bg-amber-500\/5 {
+    background-color: color-mix(in oklab, var(--color-amber-500) 5%, transparent);
   }
   .bg-amber-600 {
     background-color: var(--color-amber-600);
